--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<p>Hello! I am Shravan Godse, a final year undergraduate student in the department of Mechanical Engineering at the Indian Institute of Technology, Bombay.</p>
 								<p>I am passionate about research in Materials Science</p> 
 								<p> At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I am actively involved in mentorship programs at IIT Bombay. In my third year, I was the academic mentor for 6 sophomores guiding them in academic and general matters. </P>
-								<p>Apart from work, I love to read non-fiction and self-help books, watch TV-series (big Office fan!) and stargaze (if the skies are clear :P). </p>
+								<p>Apart from work, I love to read non-fiction and self-help books, watch TV-series (big fan of 'The Office') and stargaze (if the skies are clear :P). </p>
 								<p>If you ever want to discuss physics, materials or The Office, ping me!</p>
 							</article>
 
