--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 								<p> Since July 2020, I am a part of the <a href="https://www.me.iitb.ac.in/~a_jain/">Materials Research Lab</a> at IITB working under the guidance of <a href="https://scholar.google.com/citations?hl=en&user=LQDZbNUAAAAJ">Prof. Ankit Jain</a>.  </p>
                                 <p> I am working on finding lattice thermal conductivites using first principles ab-inito technqiues and machine learning driven novel materials discovery.
                                 Our work on type-I clathrates is expected to be out soon!  </p>
-                                <p> Currently, I am doing a research internship at the <a href="https://theofem.de/">TheoFEM</a> Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a> </p>
+                                <p> I also completed a research internship at the <a href="https://theofem.de/">TheoFEM</a> Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a> </p>
                                 <span class="image main"><img src="images/pic04.png" alt=""/></span>
-                                <p>Here, I am working on vibrational properties (dispersions, IR and Raman spectra) of hybrid lead halide perovskite using first principles methods. I am using VASP, Phonopy and SpectroscoPy codes</p>
+                                <p>I worked on vibrational properties (dispersions, IR and Raman spectra) of hybrid lead halide perovskite using first principles methods. I am using VASP, Phonopy and SpectroscoPy codes.</p>
 
 							</article>
 
