--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 								<p>I am passionate about research in Materials Science</p> 
 								<p> At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I am actively involved in mentorship programs at IIT Bombay. In my third year, I was the academic mentor for 6 sophomores guiding them in academic and general matters. </P>
 								<p>Apart from work, I love to read non-fiction and self-help books, watch TV-series (big fan of 'The Office') and stargaze (if the skies are clear :P). </p>
-								<p>If you ever want to discuss physics, materials or The Office, ping me!</p>
+								<p>If you ever want to talk about quantum physics, materials or The Office, ping me!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>My research interests include novel materials discovey, nanoscale tranport, thermoelectrics, semiconductors. <br> I wish to harness the "<a href="http://calteches.library.caltech.edu/1976/1/1960Bottom.pdf">plenty of room at the bottom</a>" to make efficient nano-devies</p>
+								<p>My research interests include novel materials discovey, nanoscale tranport, thermoelectrics, semiconductors. <br> I wish to harness the "<a href="http://calteches.library.caltech.edu/1976/1/1960Bottom.pdf">plenty of room at the bottom</a>" to make efficient nano-devies especially for clean energy applications</p>
 								<p> In December 2019, I did a research internship at <a href="https://varroc.com/">Varroc Engineering Pvt. Ltd.</a>, Pune, where I researched efficient and fast charging strategies for lithium-ion batteries for electric vehicles. </p>
-								<p>In the summer of 2020, I did a project involving Density Functional Theory and Materials Simulation using Quantum Espresso under the guidance of <a href="https://sites.google.com/view/spectroscopy-iitb/">Prof. Dipanshu Bansal </a>. You can find the final report <a href="final_report.pdf">here</a></p>
+								<p>In the summer of 2020, I did a project involving Density Functional Theory and Materials Simulation using <a href="https://www.quantum-espresso.org/">Quantum Espresso</a> under the guidance of <a href="https://sites.google.com/view/spectroscopy-iitb/">Prof. Dipanshu Bansal </a>. You can find the final report <a href="final_report.pdf">here</a></p>
 								<p> Since July 2020, I am a part of the <a href="https://www.me.iitb.ac.in/~a_jain/">Materials Research Lab</a> at IITB working under the guidance of <a href="https://scholar.google.com/citations?hl=en&user=LQDZbNUAAAAJ">Prof. Ankit Jain</a>.  </p>
                                 <p> I am working on finding lattice thermal conductivites using first principles ab-inito technqiues and machine learning driven novel materials discovery.
-                                Our work on type-I clathrates is expected to be out soon!  </p>
+                                Our work on type-I clathrates is expected to be published soon! <br> For a sneak peak, have a look at the <a href="https://arxiv.org/abs/2110.13183">arXiv preprint</a> </p>
                                 <p> I also completed a research internship at the <a href="https://theofem.de/">TheoFEM</a> Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a> </p>
                                 <span class="image main"><img src="images/pic04.png" alt=""/></span>
-                                <p>I worked on vibrational properties (dispersions, IR and Raman spectra) of hybrid lead halide perovskite using first principles methods. I am using VASP, Phonopy and SpectroscoPy codes.</p>
+                                <p>I worked on vibrational properties (dispersions, IR and Raman spectra) of hybrid lead halide perovskite using first principles methods. I used <a href="https://www.vasp.at/">VASP</a>, <a href="https://phonopy.github.io/phonopy/">Phonopy</a> and <a href="https://github.com/JMSkelton/Phonopy-Spectroscopy">SpectroscoPy</a> codes.</p>
 
 							</article>
 
@@ -82,6 +82,7 @@
 									<li><a href="https://www.linkedin.com/in/shravan-godse-007385182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://twitter.com/GodseShravan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/shravan.godse.524" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://scholar.google.co.in/citations?user=200hwmQAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 								</ul>
 							</article>
 
