--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 								<li><a href="#aboutme">About Me</a></li>
 								<li><a href="#research">Research</a></li>
 								<li><a href="Shravan_Godse_CV.pdf">CV</a></li>
+								<li><a href="#gallery">Gallery</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -46,34 +47,51 @@
 							<article id="aboutme">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hello! I am Shravan Godse, a final year undergraduate student in the department of Mechanical Engineering at the Indian Institute of Technology, Bombay.</p>
-								<p>I am passionate about research in Materials Science</p> 
-								<p> At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I am actively involved in mentorship programs at IIT Bombay. In my third year, I was the academic mentor for 6 sophomores guiding them in academic and general matters. </P>
-								<p>Apart from work, I love to read non-fiction and self-help books, watch TV-series (big fan of 'The Office') and stargaze (if the skies are clear :P). </p>
-								<p>If you ever want to talk about quantum physics, materials or The Office, ping me!</p>
+								<p>Hello! I am Shravan Godse, and I am a Mechanical Engineering graduate from the Indian Institute of Technology, Bombay.</p>
+								<p>I am passionate about research in Materials Science and I use computational techniques to simulate materials with applications in clean energy.</p> 
+								<p>I'll soon be joining as a PhD student in the research group of <a href="https://www.cmu.edu/me/venkatgroup/">Prof. Venkat Viswanathan</a> at Carnegie Mellon University where I'll be working on excting materials for battery applications.</p>
+								<p> At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I was also actively involved in mentorship programs at IIT Bombay.</P>
+								<p>Apart from work, I love to read non-fiction books, watch TV-series (big fan of 'The Office'!) and stargaze (if the skies are clear :P). </p>
+								<p>If you ever want to talk about quantum physics, materials or The Office, hit me up!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>My research interests include novel materials discovey, nanoscale tranport, thermoelectrics, semiconductors. <br> I wish to harness the "<a href="http://calteches.library.caltech.edu/1976/1/1960Bottom.pdf">plenty of room at the bottom</a>" to make efficient nano-devies especially for clean energy applications</p>
-								<p> In December 2019, I did a research internship at <a href="https://varroc.com/">Varroc Engineering Pvt. Ltd.</a>, Pune, where I researched efficient and fast charging strategies for lithium-ion batteries for electric vehicles. </p>
-								<p>In the summer of 2020, I did a project involving Density Functional Theory and Materials Simulation using <a href="https://www.quantum-espresso.org/">Quantum Espresso</a> under the guidance of <a href="https://sites.google.com/view/spectroscopy-iitb/">Prof. Dipanshu Bansal </a>. You can find the final report <a href="final_report.pdf">here</a></p>
-								<p> Since July 2020, I am a part of the <a href="https://www.me.iitb.ac.in/~a_jain/">Materials Research Lab</a> at IITB working under the guidance of <a href="https://scholar.google.com/citations?hl=en&user=LQDZbNUAAAAJ">Prof. Ankit Jain</a>.  </p>
-                                <p> I am working on finding lattice thermal conductivites using first principles ab-inito technqiues and machine learning driven novel materials discovery.
-                                Our work on type-I clathrates is expected to be published soon! <br> For a sneak peak, have a look at the <a href="https://arxiv.org/abs/2110.13183">arXiv preprint</a> </p>
-                                <p> I also completed a research internship at the <a href="https://theofem.de/">TheoFEM</a> Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a> </p>
-                                <span class="image main"><img src="images/pic04.png" alt=""/></span>
-                                <p>I worked on vibrational properties (dispersions, IR and Raman spectra) of hybrid lead halide perovskite using first principles methods. I used <a href="https://www.vasp.at/">VASP</a>, <a href="https://phonopy.github.io/phonopy/">Phonopy</a> and <a href="https://github.com/JMSkelton/Phonopy-Spectroscopy">SpectroscoPy</a> codes.</p>
+								<p><centre>I am interested in using computational techniques such as <a href="https://en.wikipedia.org/wiki/Density_functional_theory">DFT</a>, as well as machine learning and AI to understand structure-property relationships in materials with a focus on properties specific to clean energy applications. </p>
+								<h3>PhD Research</h3>
+								<p>Stay tuned!</p>
+								<h3><a href="https://www.me.iitb.ac.in/~a_jain/">Materials Research Lab</a></h3>
+								<p>I did most of the research here at IIT Bombay, under the guidance of <a>Prof. Ankit Jain</a>. 
+								I worked on finding lattice thermal conductivites using first principles ab-inito technqiues and machine learning driven novel materials discovery.</p>
+								<p>As a part of my bachelor's thesis, I worked on using renormalization and multichannel thermal transport to find thermal conductivities of 2 type-I clathrates. The work is now published in the <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac4b2c/meta">Journal of Physics: Condensed Matter</a>.</p>
+								<p>Here are some paper presentations I gave as a part of weekly group meetings</p>
+								<ul>
+									<li><a href="presentations/1_Dec_2021.pdf">Screening billions of candidates for solid lithium-ion conductors: A transfer learning approach for small data</a></li>
+									<li><a href="presentations/13_Dec_2021.pdf">Interplay between phonons and anisotropy drives negative thermal expansion in PbTiO3</a></li>
+									<li><a href="presentations/25_Dec_2021.pdf">Anomalous suppressed thermal conductivity in CuInTe2 under pressure</a></li>
+									<li><a href="presentations/12_Jan_2022.pdf">Machine learning accelerated geometry optimization in molecular simulation</a></li>
+								</ul>
+								<h3><a href="https://theofem.de/">TheoFEM Lab</a></h3>
+								<p>I also did a research internship at the TheoFEM Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a>. Here, the focus was on vibrational spectra of hybrid perovskite FAPbBr3 which was peculiar due to the interesting motion of FA+ ions in the perovskite environment. You can read more about it in my <a href="ProjectReport.pdf">final report.</a></p>
+
+								<p>For more information about my research projects and other activities, you can refer to my <a href="Shravan_Godse_CV.pdf">CV</a></p>
+								<h3><a href="https://scholar.google.com/citations?user=200hwmQAAAAJ&hl=en&oi=ao">Publications</a></h3>
 
 							</article>
+							<article id="gallery">
+							<p>Materials Research Lab group outing (April 2022)</p>
+							<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 
+							<p>TheoFEM group (May 2021)</p>
+							<span class="image main"><img src="images/pic04.png" alt=""/></span>
+							</article>
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p> Address : Hostel 9, IIT Bombay, Powai - Mumbai : 400076  <br>
-								 Email Id : <a href="mailto:shravan.godse@iitb.ac.in">shravan.godse@iitb.ac.in</a> <br>
+								<p> Address : Panchavati Society, Dhankawadi, Pune : 411043  <br>
+								 Email Id : <a href="mailto:sgodse@andrew.cmu.edu">sgodse@andrew.cmu.edu</a> <br>
 								 Mobile No : 091 - 7888049790
 								 </p>
 								</form>
@@ -82,7 +100,6 @@
 									<li><a href="https://www.linkedin.com/in/shravan-godse-007385182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://twitter.com/GodseShravan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/shravan.godse.524" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://scholar.google.co.in/citations?user=200hwmQAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 								</ul>
 							</article>
 
@@ -332,7 +349,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Shravan Godse 2021</p>
+						<p class="copyright">&copy; Shravan Godse, July 2022</p>
 					</footer>
 
 			</div>
