--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<p>I also did a research internship at the TheoFEM Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a>. Here, the focus was on vibrational spectra of hybrid perovskite FAPbBr3 which was peculiar due to the interesting motion of FA+ ions in the perovskite environment. You can read more about it in my <a href="ProjectReport.pdf">final report.</a></p>
 
 								<p>For more information about my research projects and other activities, you can refer to my <a href="Shravan_Godse_CV.pdf">CV</a></p>
-								<h3><a href="https://scholar.google.com/citations?user=200hwmQAAAAJ&hl=en&oi=ao">Publications</a></h3>
+								<h3><a href="https://scholar.google.com/citations?user=_ugD1ngAAAAJ&hl=en">Publications</a></h3>
 
 							</article>
 							<article id="gallery">
