--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p> Address : Panchavati Society, Dhankawadi, Pune : 411043  <br>
-								 Email Id : <a href="mailto:sgodse@andrew.cmu.edu">sgodse@andrew.cmu.edu</a> <br>
-								 Mobile No : 091 - 7888049790
+								<p> Email id : <a href="mailto:sgodse@andrew.cmu.edu">sgodse@andrew.cmu.edu</a> <br>
+								 Mobile No : 412 654 0388
 								 </p>
 								</form>
 								<ul class="icons">
