--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 							<article id="aboutme">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hello! I am Shravan Godse, and I am a Mechanical Engineering graduate from the Indian Institute of Technology, Bombay.</p>
-								<p>I am passionate about research in Materials Science and I use computational techniques to simulate materials with applications in clean energy.</p> 
-								<p>I'll soon be joining as a PhD student in the research group of <a href="https://www.cmu.edu/me/venkatgroup/">Prof. Venkat Viswanathan</a> at Carnegie Mellon University where I'll be working on excting materials for battery applications.</p>
-								<p> At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I was also actively involved in mentorship programs at IIT Bombay.</P>
+								<p>Hello! I am Shravan Godse, and I am a PhD Candidate advised by <a href="https://scholar.google.com/citations?user=U8r6ir4AAAAJ&hl=en&oi=ao">Prof. Jonathan Malen</a> in the Department of Mechanical Engineering at Carnegie Mellon University.</p>
+								<p>My PhD research focuses understanding and characterizing thermal transport in polymers with an aim of developing high thermal conductivity polymers for light weight heat exchangers and flexible electronics.</p>
+								<p>IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I was also actively involved in mentorship programs at IIT Bombay.</P>
 								<p>Apart from work, I love to read non-fiction books, watch TV-series (big fan of 'The Office'!) and stargaze (if the skies are clear :P). </p>
 								<p>If you ever want to talk about quantum physics, materials or The Office, hit me up!</p>
 							</article>
@@ -60,8 +59,9 @@
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p><centre>I am interested in using computational techniques such as <a href="https://en.wikipedia.org/wiki/Density_functional_theory">DFT</a>, as well as machine learning and AI to understand structure-property relationships in materials with a focus on properties specific to clean energy applications. </p>
-								<h3>PhD Research</h3>
-								<p>Stay tuned!</p>
+								<h3><a href="https://meche.engineering.cmu.edu/faculty/malen-lab.html">The Malen Laboratory</a></h3>
+								<p>We use a laser based technique called Frequency Domain Thermoreflectance (FDTR) to find thermal conductivity of polymer thin films.</p>
+								<p>Apart from FDTR, we also employ other characterization techniques such as 4-point-probe, transient hot wire, transient thermal gratings, etc. Stay tuned for our results on high thermal conductivity polymers!</p>
 								<h3><a href="https://www.me.iitb.ac.in/~a_jain/">Materials Research Lab</a></h3>
 								<p>I did most of the research here at IIT Bombay, under the guidance of <a>Prof. Ankit Jain</a>. 
 								I worked on finding lattice thermal conductivites using first principles ab-inito technqiues and machine learning driven novel materials discovery.</p>
@@ -74,7 +74,7 @@
 									<li><a href="presentations/12_Jan_2022.pdf">Machine learning accelerated geometry optimization in molecular simulation</a></li>
 								</ul>
 								<h3><a href="https://theofem.de/">TheoFEM Lab</a></h3>
-								<p>I also did a research internship at the TheoFEM Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a>. Here, the focus was on vibrational spectra of hybrid perovskite FAPbBr3 which was peculiar due to the interesting motion of FA+ ions in the perovskite environment. You can read more about it in my <a href="ProjectReport.pdf">final report.</a></p>
+								<p>I also did a research internship at the TheoFEM Lab at TU Munich, under the guidance of  <a href="https://scholar.google.com/citations?hl=en&user=JuabMJkAAAAJ">Prof. David Egger</a>. Here, the focus was on vibrational spectra of hybrid perovskite FAPbBr3 which was peculiar due to the interesting motion of FA+ ions in the perovskite environment. This work is now published in the <a href="https://pubs.acs.org/doi/full/10.1021/acs.jpclett.2c03337">Journal of Physical Chemistry Letters</a>!.</a></p>
 
 								<p>For more information about my research projects and other activities, you can refer to my <a href="Shravan_Godse_CV.pdf">CV</a></p>
 								<h3><a href="https://scholar.google.com/citations?user=_ugD1ngAAAAJ&hl=en">Publications</a></h3>
