--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Hello! I am Shravan Godse, and I am a PhD Candidate advised by <a href="https://scholar.google.com/citations?user=U8r6ir4AAAAJ&hl=en&oi=ao">Prof. Jonathan Malen</a> in the Department of Mechanical Engineering at Carnegie Mellon University.</p>
 								<p>My PhD research focuses understanding and characterizing thermal transport in polymers with an aim of developing high thermal conductivity polymers for light weight heat exchangers and flexible electronics.</p>
-								<p>IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I was also actively involved in mentorship programs at IIT Bombay.</P>
+								<p>At IIT Bombay, I have been a convener of Krittika, The Astronomy Club. I was also actively involved in mentorship programs at IIT Bombay.</P>
 								<p>Apart from work, I love to read non-fiction books, watch TV-series (big fan of 'The Office'!) and stargaze (if the skies are clear :P). </p>
 								<p>If you ever want to talk about quantum physics, materials or The Office, hit me up!</p>
 							</article>
@@ -58,7 +58,7 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><centre>I am interested in using computational techniques such as <a href="https://en.wikipedia.org/wiki/Density_functional_theory">DFT</a>, as well as machine learning and AI to understand structure-property relationships in materials with a focus on properties specific to clean energy applications. </p>
+								<p><centre>I am interested in using computational and experimental techniques  as well as machine learning and AI to understand structure-property relationships in materials with a focus on properties specific to clean energy applications. </p>
 								<h3><a href="https://meche.engineering.cmu.edu/faculty/malen-lab.html">The Malen Laboratory</a></h3>
 								<p>We use a laser based technique called Frequency Domain Thermoreflectance (FDTR) to find thermal conductivity of polymer thin films.</p>
 								<p>Apart from FDTR, we also employ other characterization techniques such as 4-point-probe, transient hot wire, transient thermal gratings, etc. Stay tuned for our results on high thermal conductivity polymers!</p>
@@ -95,7 +95,7 @@
 								 </p>
 								</form>
 								<ul class="icons">
-								        <li><a href="https://github.com/shravangodse16" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								    <li><a href="https://github.com/shravangodse16" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/shravan-godse-007385182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://twitter.com/GodseShravan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/shravan.godse.524" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
