--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Shravan Godse, March 2024</p>
+						<p class="copyright">&copy; Shravan Godse, 2024</p>
 					</footer>
 
 			</div>
